<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
    <!-- Select words to study -->
    <item android:id="@+id/action_words" android:icon="@drawable/ic_action_storage"
        android:title="@string/action_words"
        android:orderInCategory="00" android:showAsAction="ifRoom" />
    <!-- Read file -->
    <item android:id="@+id/action_open" android:icon="@drawable/ic_action_collection"
        android:title="@string/action_open"
        android:orderInCategory="200" android:showAsAction="ifRoom" />
    <!-- Setting -->
    <item android:id="@+id/action_settings" android:icon="@drawable/ic_action_config"
        android:title="@string/action_settings"
        android:orderInCategory="300" android:showAsAction="ifRoom" />
    <!--
    <item android:id="@+id/action_tts" android:icon="@drawable/ic_action_volume_on"
        android:orderInCategory="100" android:showAsAction="always" />

    <item android:id="@+id/action_info" android:icon="@drawable/ic_action_about"
        android:orderInCategory="500" android:showAsAction="always" />
        -->
</menu>
