<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ScrollView01"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_margin"
        android:paddingRight="@dimen/activity_margin">


            <TextView
                android:id="@+id/rb_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_2"
                android:text="@string/sep_head"
                android:textSize="20sp" />

            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_margin"
                android:clickable="false"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/rb_tabs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:padding="@dimen/activity_margin"
                    android:text="@string/tabs" />

                <RadioButton
                    android:id="@+id/rb_other"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/activity_margin"
                    android:text="@string/other_symbol" />

            </RadioGroup>

            <EditText
                android:id="@+id/tv_other"
                android:layout_width="20sp"
                android:layout_height="35sp"
                android:layout_marginLeft="@dimen/activity_margin_4"
                android:background="#ffc8c8c8"
                android:maxLength="1"
                android:paddingLeft="@dimen/activity_margin"
                android:textSize="20sp" />

            <View
                android:layout_width="fill_parent"
                android:layout_height="0.2dp"
                android:layout_margin="@dimen/activity_margin"
                android:background="@android:color/darker_gray"
                android:visibility="visible" />

            <CheckBox
                android:id="@+id/cb_learned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_2"
                android:layout_marginTop="@dimen/activity_margin_2"
                android:text="@string/show_learned" />

            <CheckBox
                android:id="@+id/cb_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_margin_2"
                android:layout_marginTop="@dimen/activity_margin_2"
                android:text="@string/preview_summary" />

    </LinearLayout>
</ScrollView>